# mdtmonitor-py

./: .gitignore  README.md  integrations.py  main.py  pyproject.toml  settings.example.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/css/: generated.css  main.scss
frontend/src/components/: DeploymentStatus.vue
routes/: mdt.py
