[tool.poetry]
name = "mdtmonitor"
version = "0.1.0"
description = ""
authors = ["Yan <me@octonezd.me>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
